# financial-kinematics-volatility

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: baselines_flattened.yaml  default.yaml  lstm.yaml  lstm_kinematics.yaml  multitask_lstm.yaml  multitask_tcn.yaml  tcn.yaml  tcn_mlp.yaml
reports/: 00_context.md  01_project_report.md  02_diagnosis.md  project_report.md
results/tables/: ablation_metrics.csv  baseline_metrics.csv  lstm_test_metrics.csv  lstm_walk_forward_metrics.csv  tcn_test_metrics.csv
src/: __init__.py
src/data/: __init__.py  datasets.py  download.py  features.py  preprocess.py
src/experiments/: run_ablation.py  run_baselines.py  walk_forward.py
src/models/: __init__.py  attention.py  baselines.py  lstm.py  multitask_lstm.py  multitask_tcn.py  tcn.py
src/training/: evaluate.py  losses.py  train.py
src/utils/: config.py  plotting.py  seed.py
tests/: test_datasets.py  test_feature_engineering.py
