[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-kinematics"
version = "0.1.0"
description = "Derivative-enriched temporal risk forecasting for Indian equities."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
deep = ["torch>=2.1"]
download = ["yfinance>=0.2"]
plots = ["seaborn>=0.13"]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
